# app/readium-backend/src/main/java/com/br/klaus/readium/category/api/dto/CreateCategoryRequestDTO.java
@@ -9,6 +9,7 @@ public record CreateCategoryRequestDTO(
         @Size(max = 80)
         String name,
         @Pattern(regexp = "^#([A-Fa-f0-9]{6})$", message = "A cor deve estar no formato hexadecimal, ex: #3B82F6")
-        String color
+        String color,
+        Long parentId
 ) {
 }
