# app/readium-backend/src/main/java/com/br/klaus/readium/category/api/dto/MoveCategoryRequestDTO.java
@@ -1,0 +1,6 @@
+package com.br.klaus.readium.category.api.dto;
+
+public record MoveCategoryRequestDTO(
+        Long parentId
+) {
+}
